# sckill-

./: README.md
django-svelte-sample-app/: db.sqlite3  pyproject.toml
django-svelte-sample-app/frontend/: package-lock.json  package.json  rollup.config.js
django-svelte-sample-app/frontend/src/: App.svelte
django-svelte-sample-app/myapp/: settings.py  urls.py
django-svelte-sample-app/myapp/spa/: views.py
django-svelte-sample-app/myapp/static/frontend/: bundle.css  bundle.js  bundle.js.map
django-svelte-sample-app/myapp/templates/: registration.html
django-svelte-sample-app/plan/: admin.py  forms.py  models.py  views.py
django-svelte-sample-app/plan/migrations/: 0001_initial.py  0002_lesson_cours.py  0003_alter_trainingcours_owner.py  0004_trainingcours_students_alter_trainingcours_owner.py  0005_alter_lesson_cours.py
django-svelte-sample-app/user/: forms.py  managers.py  models.py  tests.py  urls.py  views.py
django-svelte-sample-app/user/migrations/: 0001_initial.py
